src/objects/CFM_Survey_Project_Saved_Search__c.object
<CustomObject>
    <description>CFM: Contains saved searches for Projects to be added to a survey batch</description>
    <fields>
        <fullName>Enable_Filter_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Filter Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_Logic__c</fullName>
        <label>Filter Logic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Default_Inclusion_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Inclusion Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogicRow_JSON__c</fullName>
        <description>JSON Representation of the logic row entries. For use by system code only.</description>
        <label>LogicRow JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey Project Saved Search</label>
    <nameField>
        <label>Survey Project Saved Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Project Saved Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>